@@ -1,6 +1,7 @@
 Revision history for Perl extension HTTP::Throwable
 
 {{$NEXT}}
+        - update Package::Variant requirement based on CPAN testers reports
 
 0.023     2015-08-08 09:08:51-04:00 America/New_York
         - fix one last bit of Moose that snuck through
